<resources>
    <string name="app_name">Car Tracker</string>
    <string name="app_login">Bienvenido</string>
    <string name="hello_world">Hola Renato!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saludo">SaludoActivity</string>
    <string name="title_main_activity">Atividad Principal</string>
    <string name="searchActivity_title">Búsqueda por VIN</string>
    <string name="searchAdvancedActivity_title">Búsqueda avanzada</string>
    <string name="registerActivity_title">Registro Exitoso</string>
    <string name="scanActivity_title">Escanee el VIN</string>
    <string name="nombre">Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">PIN</string>
    <string name="action_sign_in">Ingreso</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">Usuario incorrecto</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña  Incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions</string>
    <string name="title_activity_main_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Falta de almacenamiento en la unidad</string>
    <string name="permission_camera_rationale">Se necesitan permisos para acceder a la camara del dispositivo</string>
    <string name="no_camera_permission">La aplicación no se ejecutara por falta de permisos de la camara.</string>
    <string name="title_activity_main">Lector de barras</string>
    <string name="barcode_header">Presione para leer el codigo de barras</string>
    <string name="read_barcode">Lector  QR</string>
    <string name="auto_focus">Auto foco</string>
    <string name="use_flash">Auto flash</string>
    <string name="barcode_success">Código leido exitosamente</string>
    <string name="barcode_failure">No se capturo ningún codigo</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_scanctivity">Scanctivity</string>
    <string name="vehiculos_posicionado_ok">Vehículo Posicionado correctamente</string>
    <string name="title_activity_register">Registro Exitoso</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Buscar</string>
    <string name="searchActivity">Buscar por VIN</string>
    <string name="sin_coneccion_red">Asegurece estar conectado a internet</string>
    <string name="sin_coneccion_lte">Verifique su conexion LTE</string>
    <string name="sin_coneccion_vpn">Verifique la conexion a la VPN</string>
    <string name="models_prompt">Modelo</string>
    <string name="colors_prompt">Color</string>
    <string name="from_date">Desde</string>
    <string name="to_date">hasta</string>
    <string name="more_options_marker_message">Persione por mas detalles</string>
    <string name="DetailInfoActivity_title">Informacion Detallada</string>
    <string name="Tracking_title">Ubicaciones Anteriores</string>
    <string name="options_title">Avanzado</string>
    <string name="contactus_title">Contactenos</string>
    <string name="exception_message">Ha ocurrido un error, consulte con Sistemas.</string>

    <string-array name="models_arrays">
        <item>Modelo</item>
        <item>LF7132 -320</item>
        <item>LF7162-620</item>
        <item>X60-LF6430 (SUV)</item>
        <item>X60-SR-LF6430</item>
        <item>LF1022-DX (MiniTruck)</item>
        <item>LF1022-LX (MiniTruck)</item>
        <item>530-LF7153</item>
        <item>530-LX-LF7153</item>
        <item>LF6401(MiniVAN)</item>
    </string-array>

    <string-array name="colors_array">
        <item>Color</item>
        <item>Amber Gold</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Dark Grey</item>
        <item>Elegant Silver</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Tungsten Grey</item>
        <item>White</item>
        <item>White Diamon</item>
        <item>Yellow</item>
    </string-array>


</resources>
